--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "bundle/syntastic"]
 	path = bundle/syntastic
 	url = https://github.com/scrooloose/syntastic.git
+[submodule "bundle/comments.vim"]
+	path = bundle/comments.vim
+	url = https://github.com/vim-scripts/comments.vim
