--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "bundle/clippo"]
 	path = bundle/clippo
 	url = https://github.com/gbigwood/Clippo.git
+[submodule "bundle/vim-dart"]
+	path = bundle/vim-dart
+	url = git@github.com:dart-lang/dart-vim-plugin.git
