--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "bundle/vim-dart"]
 	path = bundle/vim-dart
 	url = git@github.com:dart-lang/dart-vim-plugin.git
+[submodule "bundle/xmledit"]
+	path = bundle/xmledit
+	url = https://github.com/sukima/xmledit.git
