--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "bundle/vim-coffee-script"]
 	path = bundle/vim-coffee-script
 	url = git@github.com:vim-scripts/vim-coffee-script.git
+[submodule "bundle/salt-vim"]
+	path = bundle/salt-vim
+	url = git@github.com:saltstack/salt-vim.git
