--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "bundle/ctrl-p"]
 	path = bundle/ctrl-p
 	url = git@github.com:ctrlpvim/ctrlp.vim.git
+[submodule "bundle/typescript-vim"]
+	path = bundle/typescript-vim
+	url = https://github.com/leafgarland/typescript-vim.git
