--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "bundle/vim-markdown-gabrielelana"]
 	path = bundle/vim-markdown-gabrielelana
 	url = git@github.com:gabrielelana/vim-markdown.git
+[submodule "bundle/gitignore"]
+	path = bundle/gitignore
+	url = git@github.com:vim-scripts/gitignore.git
